snippet-box/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snippet-box
  namespace: snippet-box
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: snippet-box
      app.kubernetes.io/name: snippet-box
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: snippet-box
        app.kubernetes.io/name: snippet-box
    spec:
      automountServiceAccountToken: true
      containers:
        - image: 'pawelmalak/snippet-box:latest'
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          name: snippet-box
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /app/data
              name: vol
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      serviceAccountName: default
      volumes:
        - name: vol
          persistentVolumeClaim:
            claimName: snippet-box
