snippet-box/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snippet-box
  namespace: inventory
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: snippet-box
    app.kubernetes.io/name: snippet-box
  type: ClusterIP
